<resources>
    <string name="app_name">Moody</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="existing_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="error_message">An error has occurred</string>
    <string name="create_user_error">Error creating the account</string>
    <string name="create_user_success">The account was created</string>
    <string name="existing_account_message">An account with this email already exists</string>
    <string name="required_field">"Required Field!"</string>
    <string name="invalid_first_name">"Enter a valid First Name!"</string>
    <string name="invalid_last_name">"Enter a valid Last Name!"</string>
    <string name="invalid_email">"Enter a valid email!"</string>
    <string name="less_than_6_characters">"Password can't contain less than 6 characters"</string>
    <string name="one_letter_required">"Password must contain at least 1 letter"</string>
    <string name="one_digit_required">"Password must contain at least 1 digit"</string>
    <string name="one_special_character_required"> "Password must contain at least 1 special character"</string>
    <string name="passwords_not_matching">"Passwords don't match"</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="your_email_address">Your email address</string>
    <string name="log_in_success">Logged in</string>
    <string name="verify_email">Verify your email!</string>
    <string name="verify_password">Verify your password!</string>
    <string name="invalid_credentials">Invalid log in credentials!</string>
    <string name="logged_out">Logged out</string>
    <string name="your_profile">Your Profile</string>
    <string name="sign_in_profile_text">Sign in or create an account to save your favorites</string>
    <string name="notifications">Notifications</string>
    <string name="legal">Legal</string>
    <string name="sign_up_log_in">Sign up/ Log in</string>
    <string name="close">Close</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_step_by_step">View step by step</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="add_profile_picture">Add a profile picture</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting_message">Hello there!</string>
    <string name="good_morning">Good morning!</string>
    <string name="have_a_nice_day">Have a nice day!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_night">Good night!</string>
    <string name="how_do_you_feel_today">How do you feel today?</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="tired">Tired</string>
    <string name="enthusiastic">Enthusiastic</string>
    <string name="nostalgic">Nostalgic</string>
    <string name="movie_ideas">Movie ideas</string>
    <string name="movie_ideas_u">Movie ideas: </string>
    <string name="movie_ideas_button"> GO TO:      Movie Ideas  >> </string>
    <string name="travel_ideas">Travel ideas</string>
    <string name="travel_ideas_button"> GO TO:      Travel Ideas  >> </string>
    <string name="music_recommendation">Music Recommendation</string>
    <string name="music_recommendation_button"> GO TO:      Music Ideas  >> </string>
    <string name="next">NEXT >></string>
    <string name="movie_photo">Movie Photo</string>
    <string name="title"><u>Title: </u></string>
    <string name="year">Year: </string>
    <string name="runtime">Runtime: </string>
    <string name="genres">Genres: </string>
    <string name="director">Director: </string>
    <string name="actors">Actors: </string>
    <string name="plot">Plot: </string>
    <string name="artist">Artist: </string>
    <string name="genre">Genre: </string>
    <string name="country">Country: </string>
    <string name="population">Population: </string>
    <string name="tourist_attractions">Tourist attractions: </string>
    <string name="restaurants">Restaurants: </string>
</resources>