<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:padding="@dimen/padding"
        android:textColor="@color/purple_700_dark"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/runtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runtime"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/genres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/runtime" />

    <TextView
        android:id="@+id/director"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/director"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genres" />

    <TextView
        android:id="@+id/actors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actors"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/director" />

    <TextView
        android:id="@+id/plot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plot"
        android:padding="@dimen/padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/actors" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin"
        android:layout_width="300dp"
        android:layout_height="180dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plot"/>

</androidx.constraintlayout.widget.ConstraintLayout>
