<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_padding"
        android:textColor="@color/purple_700_dark"
        android:textSize="@dimen/text_title"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:padding="@dimen/item_padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/population"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population"
        android:padding="@dimen/item_padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/country" />

    <TextView
        android:id="@+id/attractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tourist_attractions"
        android:padding="@dimen/item_padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/population" />

    <TextView
        android:id="@+id/restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurants"
        android:padding="@dimen/item_padding"
        android:textColor="@color/custom_black"
        android:textSize="@dimen/text_x_small"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/attractions" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_width="350dp"
        android:layout_height="300dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurants"/>

</androidx.constraintlayout.widget.ConstraintLayout>
